refactor: 별도 eventBus 생성 및 ExchangeEvent 계층 통합